# transactions/models/cat.go
@@ -1,67 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"io"
-
-	strfmt "github.com/go-openapi/strfmt"
-
-	"github.com/go-openapi/swag"
-)
-
-// Cat cat
-// swagger:model cat
-type Cat struct {
-
-	// cat
-	Cat string `json:"cat,omitempty"`
-
-	// code
-	Code int64 `json:"code,omitempty"`
-
-	// exp for
-	ExpFor string `json:"expFor,omitempty"`
-
-	// frequency
-	Frequency string `json:"frequency,omitempty"`
-
-	// id
-	ID int64 `json:"id,omitempty"`
-
-	// possible tags str
-	// Format: binary
-	PossibleTagsStr io.ReadCloser `json:"possibleTagsStr,omitempty"`
-
-	// sub cat
-	SubCat string `json:"subCat,omitempty"`
-
-	// volatility
-	Volatility string `json:"volatility,omitempty"`
-}
-
-// Validate validates this cat
-func (m *Cat) Validate(formats strfmt.Registry) error {
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *Cat) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *Cat) UnmarshalBinary(b []byte) error {
-	var res Cat
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
