# transactions/models/cat_file.go
@@ -1,61 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	strfmt "github.com/go-openapi/strfmt"
-
-	"github.com/go-openapi/swag"
-)
-
-// CatFile cat file
-// swagger:model catFile
-type CatFile struct {
-
-	// cat
-	Cat string `json:"cat,omitempty"`
-
-	// code
-	Code string `json:"code,omitempty"`
-
-	// exp for
-	ExpFor string `json:"expFor,omitempty"`
-
-	// frequency
-	Frequency string `json:"frequency,omitempty"`
-
-	// possible tags str
-	PossibleTagsStr string `json:"possibleTagsStr,omitempty"`
-
-	// sub cat
-	SubCat string `json:"subCat,omitempty"`
-
-	// volatility
-	Volatility string `json:"volatility,omitempty"`
-}
-
-// Validate validates this cat file
-func (m *CatFile) Validate(formats strfmt.Registry) error {
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *CatFile) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *CatFile) UnmarshalBinary(b []byte) error {
-	var res CatFile
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
