# transactions/restapi/operations/cat/import_cat_responses.go
@@ -1,109 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package cat
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-
-	models "github.com/pk80/student/transactions/models"
-)
-
-// ImportCatOKCode is the HTTP code returned for type ImportCatOK
-const ImportCatOKCode int = 200
-
-/*ImportCatOK OK
-
-swagger:response importCatOK
-*/
-type ImportCatOK struct {
-
-	/*
-	  In: Body
-	*/
-	Payload models.CatFileList `json:"body,omitempty"`
-}
-
-// NewImportCatOK creates ImportCatOK with default headers values
-func NewImportCatOK() *ImportCatOK {
-
-	return &ImportCatOK{}
-}
-
-// WithPayload adds the payload to the import cat o k response
-func (o *ImportCatOK) WithPayload(payload models.CatFileList) *ImportCatOK {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the import cat o k response
-func (o *ImportCatOK) SetPayload(payload models.CatFileList) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *ImportCatOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(200)
-	payload := o.Payload
-	if payload == nil {
-		// return empty array
-		payload = models.CatFileList{}
-	}
-
-	if err := producer.Produce(rw, payload); err != nil {
-		panic(err) // let the recovery middleware deal with this
-	}
-}
-
-// ImportCatBadRequestCode is the HTTP code returned for type ImportCatBadRequest
-const ImportCatBadRequestCode int = 400
-
-/*ImportCatBadRequest Bad Request
-
-swagger:response importCatBadRequest
-*/
-type ImportCatBadRequest struct {
-}
-
-// NewImportCatBadRequest creates ImportCatBadRequest with default headers values
-func NewImportCatBadRequest() *ImportCatBadRequest {
-
-	return &ImportCatBadRequest{}
-}
-
-// WriteResponse to the client
-func (o *ImportCatBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
-
-	rw.WriteHeader(400)
-}
-
-// ImportCatInternalServerErrorCode is the HTTP code returned for type ImportCatInternalServerError
-const ImportCatInternalServerErrorCode int = 500
-
-/*ImportCatInternalServerError Internal Server Error
-
-swagger:response importCatInternalServerError
-*/
-type ImportCatInternalServerError struct {
-}
-
-// NewImportCatInternalServerError creates ImportCatInternalServerError with default headers values
-func NewImportCatInternalServerError() *ImportCatInternalServerError {
-
-	return &ImportCatInternalServerError{}
-}
-
-// WriteResponse to the client
-func (o *ImportCatInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
-
-	rw.WriteHeader(500)
-}
